--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <div class="col-12 col-lg-6">
         <h1 class="display-5 fw-bold mb-3">Your Movie Universe</h1>
         <p class="lead">
-            Where cinematic wonders await! Immerse yourself in a galaxy of films, from timeless classics to cutting-edge blockbusters. Explore curated categories and build your personalized watchlist. Unleash the magic of movies in Your Movie Universe today!
+            Step into the world of ScreenTime Your Movie Universe, where movie magic comes to life! Discover a universe of films, ranging from iconic classics to the latest blockbusters. Dive into curated categories, indulge in insightful reviews, and craft your unique watchlist. Experience the enchantment of movies in ScreenTime, your ultimate cinematic destination!
         </p>
 
         <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-start">
